<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="registro_inmobiliaria">Registro Inmobiliaria</string>
    <string name="registrar_inmobiliaria">Registrar Inmobiliaria</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="Perfil" >Perfil</string>
    <string name="Opciones" >Opciones</string>
    <string name="reg">Registro Inmobiliaria</string>
    <string name="cli">Eres Cliente?</string>
    <string name="inmo">Eres Inmobiliaria?</string>
    <string name="regcli">Registro Cliente</string>
    <string name="introduce_el_email_asociado_a_la_cuenta_y_te_enviaremos_un_correo_con_las_instrucciones_para_restablecer_la_contrase_a">Introduce el Email asociado a la cuenta y te enviaremos un correo con las instrucciones para restablecer la contraseña.</string>
    <string name="restablecer_contrase_a">Restablecer Contraseña</string>
    <string name="email">Email</string>
    <string name="enviar_instrucciones">Enviar Instrucciones</string>
    <string name="haz_click_en_la_gota_para_volver">Haz Click En La Gota Para Iniciar Sesión!</string>
    <string name="perfil_inmobiliaria">Perfil Inmobiliaria</string>
    <string name="no_tienes_ninguna">No tienes Ninguna!</string>
    <string name="nombre">Nombre</string>
    <string name="registrar">Registrar</string>
    <string name="direcci_n">Dirección</string>
    <string name="tel_fono">Teléfono</string>
    <string name="clave">Clave</string>
    <string name="cnt">Tienes Cuenta? Haz click para iniciar sesión</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="descipci_n">Descipción</string>
    <string name="precio">Precio</string>
    <string name="registro_inmueble">Registro Inmueble</string>
    <string-array name="Habitaciones">
        <item>0-1</item>
        <item>2</item>
        <item>3</item>
        <item>4+</item>
    </string-array>

    <string-array name="Precios">
        <item>0-100.000</item>
        <item>100.00-200.000</item>
        <item>200.000-300.000</item>
        <item>300.000+</item>
    </string-array>

    <string-array name="Tipo">
        <item>Apartamento</item>
        <item>Casa</item>
        <item>Studio</item>
    </string-array>

    <string-array name="Categoria">
        <item>Alquiler</item>
        <item>Venta</item>
    </string-array>
</resources>